tests/neg-custom-args/captures/sep-i15772.scala


class C(val arg: C^)

def main3(x: C^) =
  def c : C^ = new C(x) // error
  c

